--- a/package.json
+++ b/package.json
@@ -67,8 +67,8 @@
     "karma-webpack": "^1.7.0",
     "mocha": "^4.0.1",
     "node-sass": "^3.3.3",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0",
     "react-tools": "^0.13.2",
     "react-transform-catch-errors": "^1.0.0",
     "react-transform-hmr": "^1.0.1",
@@ -93,8 +93,8 @@
   "main": "dist/NotificationSystem.js",
   "name": "react-notification-system",
   "peerDependencies": {
-    "react": "0.14.x || ^15.0.0 || ^16.0.0",
-    "react-dom": "0.14.x || ^15.0.0 || ^16.0.0"
+    "react": "0.14.x || ^15.0.0 || ^16.0.0 || ^17.0.0",
+    "react-dom": "0.14.x || ^15.0.0 || ^16.0.0 || ^17.0.0"
   },
   "repository": {
     "type": "git",
